--- a/tekst/wnioski.tex
+++ b/tekst/wnioski.tex
@@ -5,14 +5,14 @@ W ramach pracy udało się zrealizować postawiony we wstępie cel. Poniżej zes
 \begin{itemize}
 	\item Filtry cząsteczkowe są szeroko wykorzystywanym i wciąż badanym narzędziem. Pozwalają one na radzenie sobie z problemami, gdy zarówno sam system jak i jego zależność od szumów jest wysoce nieliniowa. Ponadto, ponieważ są one w stanie, do pewnego stopnia, radzić sobie z systematycznymi błędami(rozdział \ref{noise_chapter}), to mogą korygować błędy popełnione przy projektowaniu modelu.
 	\item Filtry cząsteczkowe doskonale nadają się do rozwiązywania problemów lokalizacji, przy znajomości mapy. Zawdzięczają to głównie swojej prostocie, ponieważ mając model systemu, w zasadzie jedynym parametrem jaki trzeba ustalić jest liczba cząstek, którą można łatwo wyznaczyć w oparciu o wydajność urządzenia, na którym uruchamia się algorytm, albo stosując podejście opisane w rozdziale \ref{adaptive_chapter}.
-	\item Dużym problemem są sytuacje, gdy lokalizacja z początku się nie powiedzie. O ile podstawowy algorytm nie jest w stanie szybko korygować takich błędów, to usprawnienia, takie jak to opisane w rozdziale \ref{evol_chap}, są w stanie wyeliminować ten błąd. Innym rozwiązaniem może być ponowna inicjalizacja algorytmu, jak to ma miejsce w algorytmie BPF opisanym w rozdziale \ref{bpf_chapter}.
-	\item Całkowita zmiana podejścia do tego, jak się modeluje się cząstki, okazała się bardzo dobrym pomysłem, gdy otrzymujemy szybkozmienne pomiary, jak to ma miejsce w problemie samolotu opisanego w rozdziale \ref{samolot_w_locie_chap}, i zbadanego w rozdziale \ref{zmienna_mapa_chap}.
-	\item Przygotowane, na potrzeby pracy, oprogramowanie doskonale spełniło swoje zadanie. Dzięki połączeniu C++ i Pythona udało się w pełni skorzystać z zalet obu języków, to jest wydajności C++ i prostocie w manipulacji danymi Pythona. Jednym problemem był czas, który należało poświęcić na integrację obu języków, a który był zbyt długi, ze względu na problematyczne debuggowanie. TODO usuwaniem błędów implementacyjnych
+	\item Dużym problemem są sytuacje, gdy lokalizacja z początku się nie powiedzie. O~ile podstawowy algorytm nie jest w stanie szybko korygować takich błędów, to usprawnienia, takie jak to opisane w rozdziale \ref{evol_chap}, są w stanie wyeliminować ten błąd. Innym rozwiązaniem może być ponowna inicjalizacja algorytmu, jak to ma miejsce w algorytmie BPF opisanym w rozdziale \ref{bpf_chapter}.
+	\item Całkowita zmiana podejścia do tego, jak się modeluje się cząstki, okazała się bardzo dobrym pomysłem, gdy otrzymujemy szybkozmienne pomiary, jak to ma miejsce w~problemie samolotu opisanego w rozdziale \ref{samolot_w_locie_chap}, i zbadanego w rozdziale \ref{zmienna_mapa_chap}.
+	\item Przygotowane, na potrzeby pracy, oprogramowanie doskonale spełniło swoje zadanie. Dzięki połączeniu C++ i Pythona udało się w pełni skorzystać z zalet obu języków, to jest wydajności C++ i prostocie w manipulacji danymi Pythona. Jednym problemem był czas, który należało poświęcić na integrację obu języków, a~który był zbyt długi, ze względu na problematyczne debuggowanie. TODO usuwaniem błędów implementacyjnych
 \end{itemize}
 
 \section{Kierunki przyszłych badań}
 Jak wspominano wcześniej, filtry cząsteczkowe są nadal rozwijane. Poniżej przedstawiono kilka pomysłów, które można by zbadać.
 \begin{itemize}
-	\item Zrezygnowanie z implementacji C++ na rzecz całkowitego przejścia na Python, z wykorzystaniem na przykład pakietu Numba \cite{numba}. Poza przyspieszeniem porównywalnym z C++, pozwoliło by na przykład na poszerzanie kodu o obliczenia na karcie graficznej. Dzięki temu, można by spróbować rozwiązać problemy opisane bardziej skomplikowanymi modelami.
+	\item Zrezygnowanie z implementacji C++ na rzecz całkowitego przejścia na Python, z~wykorzystaniem na przykład pakietu Numba \cite{numba}. Poza przyspieszeniem porównywalnym z~ C++, pozwoliło by na przykład na poszerzanie kodu o obliczenia na karcie graficznej. Dzięki temu, można by spróbować rozwiązać problemy opisane bardziej skomplikowanymi modelami.
 	\item Zamiast zwykłych uśrednień, można by zbadać inne metody estymacji stanu. Można by na przykład przeprowadzić klasteryzację cząstek, a następnie uśredniać dla poszczególnych klastrów i wybierać jeden, o największej sumie wag.
 \end{itemize}
